Fixed alignment isssue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -156,3 +156,7 @@ footer {
 .main-container{
   padding-bottom: 50px;
 }
+
+#save_btn {
+  margin-top: -75px;
+}
